[tool.poetry]
name = "testing"
version = "0.1.0"
description = "Resting for Axcient web site"
authors = ["Sergei Chekhonin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.2"
selenium = "^4.23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
